[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scene/data/data.gd" id="1"]

[node name="Data" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="BoxContainer" type="BoxContainer" parent="."]
offset_left = 30.0
offset_top = 30.0
offset_right = 490.0
offset_bottom = 161.0
vertical = true

[node name="HBoxContainer" type="HBoxContainer" parent="BoxContainer"]
offset_right = 460.0
offset_bottom = 31.0

[node name="btn_get_files" type="Button" parent="BoxContainer/HBoxContainer"]
offset_right = 70.0
offset_bottom = 31.0
text = "GetFiles"

[node name="btn_delete_files" type="Button" parent="BoxContainer/HBoxContainer"]
offset_left = 74.0
offset_right = 167.0
offset_bottom = 31.0
text = "DeleteFiles"

[node name="HBoxContainer2" type="HBoxContainer" parent="BoxContainer"]
offset_top = 35.0
offset_right = 460.0
offset_bottom = 66.0

[node name="btn_abort_file_uploads" type="Button" parent="BoxContainer/HBoxContainer2"]
offset_right = 142.0
offset_bottom = 31.0
text = "AbortFileUploads"

[node name="btn_finalize_file_uploads" type="Button" parent="BoxContainer/HBoxContainer2"]
offset_left = 146.0
offset_right = 303.0
offset_bottom = 31.0
text = "FinalizeFileUploads"

[node name="btn_initiate_file_uploads" type="Button" parent="BoxContainer/HBoxContainer2"]
offset_left = 307.0
offset_right = 460.0
offset_bottom = 31.0
text = "InitiateFileUploads"

[node name="btn_file_upload_test" type="Button" parent="BoxContainer"]
offset_top = 70.0
offset_right = 460.0
offset_bottom = 101.0
text = "FileUploadTest"

[node name="lbl_json_parse_result" type="Label" parent="BoxContainer"]
offset_top = 105.0
offset_right = 460.0
offset_bottom = 131.0
text = "json_parse_result"

[node name="value" type="TextEdit" parent="BoxContainer/lbl_json_parse_result"]
offset_top = 39.0
offset_right = 579.0
offset_bottom = 261.0

[connection signal="pressed" from="BoxContainer/HBoxContainer/btn_get_files" to="." method="_on_btn_get_files_pressed"]
[connection signal="pressed" from="BoxContainer/HBoxContainer/btn_delete_files" to="." method="_on_btn_delete_files_pressed"]
[connection signal="pressed" from="BoxContainer/HBoxContainer2/btn_abort_file_uploads" to="." method="_on_btn_abort_file_uploads_pressed"]
[connection signal="pressed" from="BoxContainer/HBoxContainer2/btn_finalize_file_uploads" to="." method="_on_btn_finalize_file_uploads_pressed"]
[connection signal="pressed" from="BoxContainer/HBoxContainer2/btn_initiate_file_uploads" to="." method="_on_btn_initiate_file_uploads_pressed"]
[connection signal="pressed" from="BoxContainer/btn_file_upload_test" to="." method="_on_btn_file_upload_test_pressed"]
